<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ConcertActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingStart="40dp"

            android:paddingEnd="40dp"
            android:paddingBottom="20dp">


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/Movie_page_header"
                android:textAlignment="center"

                android:textColor="@color/black"
                android:textSize="18pt"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.03" />

            <LinearLayout
                android:id="@+id/movie_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="5dp"
                app:layout_constraintTop_toBottomOf="@+id/movie_date_view">

                <TextView
                    android:id="@+id/movie_name_label"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="15dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/Movie_movie_title"
                    android:textAlignment="textStart"
                    android:textColor="@color/gray"
                    android:textSize="8pt" />

                <Spinner
                    android:id="@+id/movie_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_hall_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingVertical="5dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_place_view">

                <TextView
                    android:id="@+id/movie_hall_label"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="15dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/Movie_hall_title"
                    android:textAlignment="textStart"
                    android:textColor="@color/gray"
                    android:textSize="8pt" />

                <Spinner
                    android:id="@+id/movie_hall_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_date_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="5dp"
                app:layout_constraintStart_toStartOf="@+id/movie_hall_view"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <TextView
                    android:id="@+id/movie_date_label"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"

                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/Movie_date_title"
                    android:textColor="@color/black"
                    android:textSize="8pt" />

                <Spinner
                    android:id="@+id/movie_date_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_time_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="5dp"
                app:layout_constraintStart_toStartOf="@+id/movie_hall_view"
                app:layout_constraintTop_toBottomOf="@+id/movie_name_view">

                <TextView
                    android:id="@+id/movie_time_label"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"

                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/Movie_time_title"
                    android:textColor="@color/gray"
                    android:textSize="8pt" />

                <Spinner
                    android:id="@+id/movie_time_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_row_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingVertical="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_time_view">

                <TextView
                    android:id="@+id/movie_row_label"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="15dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/Movie_row_title"
                    android:textAlignment="textStart"
                    android:textColor="@color/gray"
                    android:textSize="8pt" />

                <Spinner
                    android:id="@+id/movie_row_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_place_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingVertical="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_row_view">

                <TextView
                    android:id="@+id/movie_place_label"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="15dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/Movie_seat_title"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="8pt" />

                <EditText
                    android:id="@+id/movie_place_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789,-"
                    android:ems="10"
                    android:hint="--"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textAlignment="center"
                    android:textSize="10pt" />
            </LinearLayout>

            <Button
                android:id="@+id/done_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"


                android:fontFamily="sans-serif-condensed-medium"
                android:paddingVertical="15dp"
                android:text="@string/Done_btn_text"

                android:textColor="@color/white"

                android:textSize="8pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clear_btn" />

            <Button
                android:id="@+id/clear_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="50dp"

                android:fontFamily="sans-serif-condensed-medium"

                android:text="@string/Clear_btn_text"
                android:textColor="@color/white"
                android:textSize="8pt"
                app:layout_constraintStart_toStartOf="@+id/done_btn"
                app:layout_constraintTop_toBottomOf="@+id/movie_hall_view" />

            <Button
                android:id="@+id/history_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"


                android:fontFamily="sans-serif-condensed-medium"
                android:paddingVertical="15dp"
                android:text="@string/History_btn_text"

                android:textColor="@color/white"

                android:textSize="8pt"
                app:layout_constraintEnd_toEndOf="@+id/done_btn"
                app:layout_constraintTop_toBottomOf="@+id/done_btn" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Конец..."
                android:textColor="@color/D_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/history_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>